Fixed highlighting issue with whitespace and changed highlighting to go from start to end inclusive

--- a/src/sass/components/_code-box.scss
+++ b/src/sass/components/_code-box.scss
@@ -44,6 +44,7 @@ mark {
 .highlights{
   position: absolute;
   left: 4%;
+  white-space: pre;
 }
 
 .line-counter {
